--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "maxjoynxt/crisrouter",
+    "name": "maxjoynxt/maxrouter",
     "description": "A simple fast PHP router",
     "keywords": ["router", "routing", "php router", "phprouter", "php route", "phproute", "phprouting", "php routing", "simple php router", "my php router"],
     "homepage": "https://github.com/maxjoygit/maxrouter",
